appId: com.knowyourpit.app
---
- tapOn:
    text: "More"
- waitForAnimationToEnd:
    timeout: 2000
- tapOn:
    text: "My Grills"
- waitForAnimationToEnd:
    timeout: 2000
- assertVisible:
    text: "My Grills"
    timeout: 5000
- takeScreenshot: "05-my-grills"
